# consenzisk-bench

./: .gitignore  Cargo.toml  README.md  timinganalysis.py
guest/: Cargo.toml
guest/src/: main.rs
host/: Cargo.toml  Makefile  build.rs
host/subscripts/: download_ef_data.sh  parse_log_to_table.sh  sort_table.sh
host/summaries/: sorted_summary_block_attestation.md  summary_block_attestation.md  summary_block_attester_slashing.md
lib/: Cargo.toml
lib/src/: file.rs  input.rs  lib.rs  snappy.rs  ssz.rs
methods/: Cargo.toml
methods/guest/: Cargo.toml
methods/guest/src/: main.rs
methods/src/: lib.rs
