[workspace]
members = ["host", "lib", "guest"]
default-members = ["host"]
resolver = "2"

# Always optimize; building and running the guest takes much longer without optimization.
[profile.dev]
opt-level = 3

[profile.release]
debug = true
lto = true

[workspace.package]
edition = "2021"

[workspace.dependencies]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
ethereum_ssz = "0.9"
ream-consensus = { git = "https://github.com/ReamLabs/ream.git", package = "ream-consensus-beacon", features = ["zkvm"] }
ream_lib = { path = "lib" }
sha2 = "0.10.8"
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" }
tracing = "0.1"
tree_hash = "0.10"
tree_hash_derive = "0.10"
byteorder = "1.5.0"
serde = { version = "1.0", default-features = false, features = ["derive"] }
bincode = "1.3"

[patch.crates-io]
ethereum_hashing = { git = "https://github.com/ReamLabs/ethereum_hashing" }
ssz_types = { git = "https://github.com/ReamLabs/ssz_types", branch = "magic-extended-list" } # Extends 2^29 to 2^40 list root
