[package]
name = "consenzisk_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
ream_lib = { path = "../lib" }
ream-consensus = { workspace = true }
tree_hash = { workspace = true }
bincode = { workspace = true }
ziskos = { workspace = true }
consenzisk_host = { path = "../host" }
serde = { version = "1.0", features = ["derive"] }
