[package]
name = "consenzisk_host"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/bin/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive", "env"] }
derive_more = { version = "2.0.1", features = ["full"] }
ream_lib = { path = "../lib" }
sha2 = { workspace = true }
byteorder = { workspace = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.139", default-features = false, features = ["alloc"] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tree_hash = { workspace = true }
bincode = "1.3"

# Ethereum dependencies
ethereum_ssz = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }

[build-dependencies]
