[package]
name = "ream_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
ethereum_ssz = { workspace = true }
serde = { version = "1.0.200", default-features = false, features = ["derive"] }
snap = "1.1.1"
tracing = { workspace = true }

# ReamBeaconState
alloy-primitives = { version = "1.1", features = ['serde'] }
anyhow = "1.0"
ethereum_ssz_derive = "0.9"
ssz_types = "0.11"
tree_hash = { workspace = true }
tree_hash_derive = { workspace = true }

# Ream dependencies
ream-consensus = { workspace = true }
